@@ -4,6 +4,7 @@ Date: ???
   Features:
     - Added 'Module' search option to search for modules in machines
     - Added arrow pointing from player to highlighted results
+    - Added icon to character corpse to differentiate it from a living character in search results (thanks Earendel for the icon!)
     - 'All surfaces' checkbox is now hidden when there is only one surface in the game
     - Optimised search time by ≈20% when many search modes are enabled
   Bugfixes:
